--- a/panes/about.hbs
+++ b/panes/about.hbs
@@ -7,7 +7,7 @@
     </tr>
   </table>
 </div>
-<div class="mainbody">
+<div class="container">
   Copyright &copy; 2008-2011 Chris Porter and the qwebirc project.<br/>All rights reserved.<br/><br/>
   Licensed under the GNU General Public License, version 2 only.
   <p>
