--- a/panes/channel-list.hbs
+++ b/panes/channel-list.hbs
@@ -6,7 +6,7 @@
             <input type="button" class="refresh btn btn-default btn-smaller" value="refresh">
         </div>
     </div>
-    <div class="panel-body table-responsive">
+    <div class="table-responsive">
         <table class="channels table table-striped table-hover">
             <thead>
                 <tr>
