--- a/panes/feedback.hbs
+++ b/panes/feedback.hbs
@@ -7,7 +7,7 @@
     </tr>
   </table>
 </div>
-<div class="mainbody">
+<div class="container">
   <p>
     Thank you for taking the time to try to submit feedback. I currently have not updated this part of the project<br/>
     If you have found an issue please submit it on my <a href="https://github.com/megawac/qwebirc-enhancements">github repo</a><br/>
