--- a/panes/privacypolicy.hbs
+++ b/panes/privacypolicy.hbs
@@ -7,7 +7,7 @@
     </tr>
   </tbody></table>
 </div>
-<div class="mainbody">
+<div class="container">
   <h1>Data retention policy</h1>
   <h2>Non-retention</h2>
   <ul>
