--- a/templates/amd/welcome-pane.hbs
+++ b/templates/amd/welcome-pane.hbs
@@ -1,4 +1,4 @@
-<div class="alert alert-block fade in">
+<div class="alert alert-warning fade in">
     <button type="button" class="close" data-trigger="nix" data-nix-options="'target': '!div.alert'">×</button>
     <h4>Welcome to {{appTitle}}</h4>
     <div class="controls">
