--- a/templates/authpage.hbs
+++ b/templates/authpage.hbs
@@ -1,4 +1,4 @@
-<div class="container center">
+<div class="container-fluid center">
     <form class="login">
         <h2>Connect to {{network}} IRC</h2>
         <div class="control-group right">
