--- a/templates/ircInput.hbs
+++ b/templates/ircInput.hbs
@@ -5,7 +5,7 @@
         <input class='tt-hint hidden' type='text' autocomplete='off' spellcheck='off' disabled>{{!the actual autocomplete layer - gets rendered underneath the tt-query by css}}
         <input class='tt-query form-control irc-input decorated' type='text' autocomplete='off' spellcheck='off'>
         <span class='input-group-btn'>
-            <button class='btn btn-default send' type='submit'>&gt;</button>
+            <button class='btn send' type='submit'>&gt;</button>
         </span>
     </div>
 </form>
