--- a/css/src/qui.css
+++ b/css/src/qui.css
@@ -26,23 +26,30 @@
 
 .qui .windows {
     width: 100%;
+    position: absolute;
+    top: 25px;
+    bottom: 0;
 }
 
-.qui .window {
+.qui .windows > * {
+    height: 100%;
+}
+
+/* .qui .window {
     position: absolute;
     top: 25px;
     bottom: 0;
     width: 100%;
-}
+} */
 
 .qui .window > * {
     width: 100%;
 }
 
 .qui .content {
+    position: absolute;
     top: 0;
     bottom: 25px;
-    position: absolute;
 }
 
 .qui .ircwindow .content {
@@ -64,7 +71,9 @@
     right: 140px;
 }
 
+
 .qui .ircwindow .rightpanel {
+    width: 140px;
     position: absolute;
     right: 0;
 }
@@ -87,7 +96,7 @@
     text-decoration: none;
     white-space: nowrap;
     float: left;
-    margin: 1px 0px 0px 1px;
+    margin: 1px 0 1px 8px;
     font-weight: bold;
 }
 
@@ -108,6 +117,12 @@
     white-space: pre;
     white-space: pre-wrap;
     overflow: auto;
+}
+
+
+.qui .nicklist {
+    overflow: auto;
+    font-size: 0.7em;
 }
 
 .qui .lines .nick {
@@ -145,13 +160,7 @@
 }
 
 .qui .input div > * {
-    height: 24px;
-}
-
-.qui .nicklist {
-    width: 140px;
-    overflow: auto;
-    font-size: 0.7em;
+    height: 26px;
 }
 
 .qui .nicklist .user, .qui .nick-menu {
@@ -161,20 +170,12 @@
     padding-left: 1px;
 }
 
-.qui .nick-menu {
-    width: initial;
-}
-
 .qui .nick-menu ul {
     margin: 0;
     padding-left: 20px;
     list-style-type: circle;
-}
-
-.qui .nick-menu li {
     cursor:pointer;cursor:hand;
 }
-
 
 .qui .nicklist .menu {
     margin: 0 0 0 5px;
