--- a/panes/faq.hbs
+++ b/panes/faq.hbs
@@ -7,7 +7,7 @@
     </tr>
   </table>
 </div>
-<div class="mainbody">
+<div class="container">
   <h2>Can I make the widget autoconnect?</h2>
   <p>No, if this was allowed then bad people could IFRAME lots and lots of copies, which would get you glined for having too many clones.<br/>However you can prefill the channel/nickname information (type /EMBED in the main window).</p>
 
