--- a/panes/wizard.hbs
+++ b/panes/wizard.hbs
@@ -7,7 +7,7 @@
     </tr>
   </table>
 </div>
-<div class="mainbody">
+<div class="container">
   <p>I currently do not support the embedded wizard but you can form qwebirc from <a href="https://github.com/megawac/qwebirc-enhancements">my github repo</a></p>
   <input type="button" value="Close" data-event="close" class="btn btn-default btn-small" />
 </div>
