Fix detached windows offsetting others; fixes #12
Removes grid from window and sets height to 0 when detaching a window

--- a/css/src/detached-window.css
+++ b/css/src/detached-window.css
@@ -1,3 +1,7 @@
+.detached { /* override window wrapper default height */
+    height: 0 !important;
+}
+
 .detached .detached-window {
     border-radius: 5px; 
     -moz-border-radius: 5px; 
