--- a/configure/index.tmpl
+++ b/configure/index.tmpl
@@ -7,11 +7,14 @@
   <!-- /build -->
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" type="image/png" href="images/favicon.png">
 
   <!-- build:process -->
     <link href="<%= getFileURL('bootstrap css') %>" rel="stylesheet">
     <link href="<%= getFileURL('qwebirc css') %>" rel="stylesheet">
+
+    <script src="<%= getFileURL('respond') %>"></script>
 
     <script src='<%= getFileURL('mootools') %>'></script>
     <% if(pkg.build['node server']) { %> <script src="<%= getFileURL('socketio') %>" async></script> <% } %>
