Linting and corrections

--- a/templates/authpage.hbs
+++ b/templates/authpage.hbs
@@ -7,7 +7,7 @@
             </label>
         </div>
         <div class="control-group right {{#unless full}}hidden{{/unless}}">
-            <label class="control-label" for="username">{{network}} username:
+            <label class="control-label" for="username">Username:
                 <input type="text" class="form-control" data-validate="username" name="full" id="username" value="{{username}}" placeholder="{{network}} username">
             </label>
         </div>
