Update add qweb to your site template

--- a/panes/wizard.hbs
+++ b/panes/wizard.hbs
@@ -8,6 +8,6 @@
   </table>
 </div>
 <div class="container">
-  <p>I currently do not support the embedded wizard but you can form qwebirc from <a href="https://github.com/megawac/qwebirc-enhancements">my github repo</a></p>
+  <p>I haven't added support for the embedded wizard yet, however you can set up the iFrame manually or clone <a href="https://github.com/megawac/qwebirc-enhancements">the source code from the Github repo</a></p>
   <input type="button" value="Close" data-event="close" class="btn btn-default btn-small" />
 </div>
