Seperate templates from rest of qwebirc code

--- a/configure/index.tmpl
+++ b/configure/index.tmpl
@@ -22,6 +22,7 @@
 
   <!-- build:script bundle  -->
     <script src="js/dist/plugins-<%= pkg.version %>.js"></script>
+    <script src="js/dist/templates-<%= pkg.version %>.js"></script>
     <script src="js/dist/qwebirc-<%= pkg.version %>.js"></script>
   <!-- /build -->
 
