--- a/templates/ircTab.hbs
+++ b/templates/ircTab.hbs
@@ -1,1 +1,1 @@
-<span class='tab'>{{{name}}}&nbsp;{{> tabDetach}}{{#if closable}}{{> tabClose}}{{/if}}</span>
+<span class='tab'>{{{name}}}{{> tabDetach}}{{#if closable}}{{> tabClose}}{{/if}}</span>
