--- a/templates/mainmenu.hbs
+++ b/templates/mainmenu.hbs
@@ -1,7 +1,7 @@
 <ul class="main-menu dropdownmenu hidden">
     <a class="internal" href="options"><li><span>Options</span></li></a>
     <a class="internal" href="channels"><li><span>Channel List</span></li></a>
-    <a class="internal" href="embedded"><li><span>Add webchat to your site</span></li></a>
+    <a class="internal" href="embed"><li><span>Add webchat to your site</span></li></a>
     <a class="internal" href="privacy"><li><span>Privacy policy</span></li></a>
     <a class="internal" href="faq"><li><span>Frequently asked questions</span></li></a>
     <a class="internal" href="feedback"><li><span>Submit feedback</span></li></a>
