--- a/configure/index.tmpl
+++ b/configure/index.tmpl
@@ -1,33 +1,30 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <base>
+
   <!-- build:process -->
     <title>WebIRC Using QWebirc v<%= pkg.version %></title>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="irc,qwebirc<% if(pkg.network) { %>,<%= pkg.network %><% } %>">
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
   <!-- /build -->
-  <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-  <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" type="image/png" href="images/favicon.png">
-
   <!-- build:process -->
     <link href="<%= getFileURL('bootstrap css') %>" rel="stylesheet">
     <link href="<%= getFileURL('qwebirc css') %>" rel="stylesheet">
 
-    <script src="<%= getFileURL('respond') %>" async></script>
-
-    <script src='<%= getFileURL('mootools') %>'></script>
+    <script src="<%= getFileURL('modules') %>"></script>
+    <script src="<%= getFileURL('mootools') %>"></script>
     <% if(pkg.build['node server']) { %> <script src="<%= getFileURL('socketio') %>" async></script> <% } %>
   <!-- /build -->
-
   <!-- build:script bundle  -->
     <script src="js/dist/plugins-<%= pkg.version %>.js"></script>
     <script src="js/dist/templates-<%= pkg.version %>.js"></script>
     <script src="js/dist/qwebirc-<%= pkg.version %>.js"></script>
   <!-- /build -->
 
-  <!-- build:script config -->
-    <!-- app creation script -->
+  <!-- build:script inline config -->
     <script src="configure/config.js"></script>
   <!-- /build -->
 </head>
