Customize bootstrap build and banners

--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -9,7 +9,7 @@
 // Core CSS
 @import "twbs/scaffolding.less";
 @import "twbs/type.less";
-@import "twbs/code.less";
+// @import "twbs/code.less";
 @import "twbs/grid.less";
 @import "twbs/tables.less";
 @import "twbs/forms.less";
@@ -17,22 +17,22 @@
 
 // Components
 @import "twbs/component-animations.less";
-@import "twbs/glyphicons.less";
+// @import "twbs/glyphicons.less";
 @import "twbs/dropdowns.less";
 @import "twbs/button-groups.less";
 @import "twbs/input-groups.less";
-@import "twbs/navs.less";
-@import "twbs/navbar.less";
-@import "twbs/breadcrumbs.less";
-@import "twbs/pagination.less";
+// @import "twbs/navs.less";
+// @import "twbs/navbar.less";
+// @import "twbs/breadcrumbs.less";
+// @import "twbs/pagination.less";
 @import "twbs/pager.less";
 @import "twbs/labels.less";
-@import "twbs/badges.less";
+// @import "twbs/badges.less";
 @import "twbs/jumbotron.less";
-@import "twbs/thumbnails.less";
+// @import "twbs/thumbnails.less";
 @import "twbs/alerts.less";
-@import "twbs/progress-bars.less";
-@import "twbs/media.less";
+// @import "twbs/progress-bars.less";
+// @import "twbs/media.less";
 @import "twbs/list-group.less";
 @import "twbs/panels.less";
 @import "twbs/wells.less";
@@ -40,9 +40,9 @@
 
 // Components w/ JavaScript
 @import "twbs/modals.less";
-@import "twbs/tooltip.less";
-@import "twbs/popovers.less";
-@import "twbs/carousel.less";
+// @import "twbs/tooltip.less";
+// @import "twbs/popovers.less";
+// @import "twbs/carousel.less";
 
 // Utility classes
 @import "twbs/utilities.less";
