--- a/less/qwebirc.less
+++ b/less/qwebirc.less
@@ -1,18 +1,15 @@
-
-//
-// Load core variables and mixins
-// --------------------------------------------------
-
-@import "twbs/variables.less";
-@import "twbs/mixins.less";
-@import "qwebirc/variables.less";
-
 @import (less) "qwebirc/jQuery-Icons.css";
-
 
 /*!
  * qwebirc css by Graeme (megawac) Yeates
  */
+
+// Load core variables and mixins
+@import "twbs/variables.less";
+@import "twbs/mixins.less";
+@import "qwebirc/variables.less";
+
+//customize bootstrap
 @import "qwebirc/bootstrap-theme";
 
 @import "qwebirc/core";
