Use monospace fonts and some less cleanup

--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -21,7 +21,7 @@
 @import "twbs/dropdowns.less";
 @import "twbs/button-groups.less";
 @import "twbs/input-groups.less";
-// @import "twbs/navs.less";
+@import "twbs/navs.less";
 // @import "twbs/navbar.less";
 // @import "twbs/breadcrumbs.less";
 // @import "twbs/pagination.less";
