--- a/less/qwebirc/qui.less
+++ b/less/qwebirc/qui.less
@@ -1,6 +1,5 @@
 // Main QUI theme styles 
 .qui {
-
     .dropdownmenu {
         position: absolute;
         z-index: 100;
@@ -92,7 +91,7 @@
         }
 
         .lines {
-            font-family: @qweb-serif;
+            font-family: @qweb-lines;
             text-indent: 10px;
             padding-left: 1em;
         }
