--- a/less/qwebirc/loginbox.less
+++ b/less/qwebirc/loginbox.less
@@ -36,7 +36,7 @@
 }
 
 /************* Welcome *****************/
-.qui .welcome {
+.qwebirc .welcome {
     position: absolute;
     bottom: 0;
     right: 10px;
