Simplify Modifiable css implementation

--- a/less/qwebirc/qui.less
+++ b/less/qwebirc/qui.less
@@ -10,11 +10,18 @@
         a {
             cursor: pointer; cursor: hand;
             padding-top: 3px;
+            color: black
         }
     }
 
     .chanmenu {
         width: 150px;
+
+        .hint {
+            float: right;
+            font-size: 75%;
+            color: grey;
+        }
     }
 
     .dropdownhint {
@@ -26,8 +33,8 @@
     }
 
     .windows {
-        width: 100%;
         position: absolute;
+        width: 100%;
         top: 25px;
         bottom: 0;
     }
@@ -69,8 +76,8 @@
     }
 
     .properties {
-        bottom: 0;
         position: absolute;
+        bottom: 0;
         width: 100%;
         height: 25px;
     }
@@ -81,8 +88,8 @@
         }
 
         .rightpanel {
-            width: 140px;
             position: absolute;
+            width: 140px;
             right: 0;
         }
 
@@ -130,7 +137,7 @@
     .lines .nick {
         margin-right: 4px;
         .channel {
-            color: rgb(109, 89, 89);
+            color: #6d5959;
         }
     }
 
@@ -160,6 +167,11 @@
 
         div > * {
             height: 26px;
+        }
+
+        .nickname {
+            color: #524F50;
+            font-size: 14px;
         }
     }
 
