Improved the colour picker implementation

--- a/less/qwebirc/tabbar.less
+++ b/less/qwebirc/tabbar.less
@@ -43,11 +43,11 @@
                 background: #d8d88a;
             }
             &.brouhaha {
-                background-image: url("../images/b_background_unsel.gif");
+                background-image: url("/images/b_background_unsel.gif");
                 padding-left: 65px; //width wont work here
 
                 &.selected {
-                    background-image: url("../images/b_background_sel2.gif");
+                    background-image: url("/images/b_background_sel2.gif");
                 }
             }
         }
