--- a/less/qwebirc/panels.less
+++ b/less/qwebirc/panels.less
@@ -10,7 +10,7 @@
         border: 0px solid black;
         width: 360px;
         height: 8px;
-        background-image: url(../images/hue.png);
+        background-image: url(/images/hue.png);
         display: inline-block;
         margin-left: 15px;
 
@@ -53,9 +53,25 @@
     padding-top: 25px;
     overflow-y: scroll;
 
-
+    .tab-content {
+        margin-top: -17px;
+    }
     .actions button {
         margin-right: 5px;
+    }
+
+    .ui-options {
+        .controls {
+            padding-bottom: 4px;
+        }
+        input {
+            &.color, &[type="number"] {
+                width: 60px;
+                float: left;
+                margin-left: 10px;
+                margin-right: 10px;
+            }
+        }
     }
 }
 
