--- a/mcss/qui-modifiable-css.hbs
+++ b/mcss/qui-modifiable-css.hbs
@@ -26,25 +26,25 @@
 }
 
 .lines .highlight2 {
-    background-color: {{$col 'A4FCCA'}};
+    background-color: {{$col 'a4fcca'}};
 }
 
 .lines .highlight3 {
-    background-color: {{$col 'FAC3D5'}};
+    background-color: {{$col 'fac3d5'}};
 }
 
 .lines .mentioned {
-    background-color: {{$col 'E63772'}} !important;
+    background-color: {{$col 'e63772'}} !important;
 }
 
 .qui .properties {
     background-color: {{$col ''}};
-    border-top: thin solid {{$col 'c8d2dc'}};
+    border-top: thin solid {{$col 'b8c5d1'}};
 }
 
 
 .qui .topic {
-    color: {{$col '4F4F4F' 'font'}};
+    color: {{$col '4f4f4f' 'font'}};
     background-color: {{$col ''}};
     border-bottom: thin dashed {{$col 'c8d2dc'}};
 }
@@ -52,12 +52,7 @@
 {{! tab stuff }}
 .qui .outertabbar {    
     border-bottom: thin solid {{$col '858585'}};
-    background: {{$col '#E1ECF8'}};
-}
-
-
-.qui .tabbar {
-    color: {{$col '' 'font'}};
+    background: {{$col 'e1ecf8'}};
 }
 
 .qui .tabbar .tab {
@@ -65,16 +60,7 @@
     border: thin solid {{$col 'c8d2dc'}};
 }
 
-.qui .tabbar .tab:hover {
-    background: {{$col 'fff'}};
-    border: thin solid #c8d2dc;
-    -moz-border-radius: 4px;
-    -webkit-border-radius: 4px;
-}
-
 .qui .tabbar .selected.tab {
-    background: {{$col 'fff'}};
-    border: thin solid {{$col 'c8d2dc'}};
     color: {{$col '333333' 'font'}};
 }
 {{!  tab stuff  }}
@@ -121,9 +107,9 @@
 }
 
 .qui .dropdownmenu a:hover {
-    background: {{$col 'FFFE'}};
+    background: {{$col 'fffe'}};
 }
 
 .qui hr.lastpos {
-  border-top: thin solid {{$col 'C8D2DC'}};
+  border-top: thin solid {{$col 'c8d2dc'}};
 }
