Adjustable font colours

--- a/panes/options.hbs
+++ b/panes/options.hbs
@@ -74,6 +74,12 @@
                     <input id="colour.background" class="color" value="{{$hex 'background'}}" spellcheck="false">
                 </label>
             </div>
+            <div class="controls">
+                <label for="colour.font">
+                    {{lang "FONT_COLOUR"}}
+                    <input id="colour.font" class="color" value="{{$hex 'font'}}" spellcheck="false">
+                </label>
+            </div>
         </div>
         <div class="irc-options control-group well">
             <div class="controls">
