Improved tabbar colour and removed redundant css

--- a/less/qwebirc/qui.less
+++ b/less/qwebirc/qui.less
@@ -113,6 +113,11 @@
         float: left;
         margin: 1px 0 1px 8px;
         font-weight: bold;
+
+        background: #FFFFBF;
+        border: thin solid #C8D1DB;
+        border-radius: 4px 4px 4px 4px;
+        color: #000;
     }
 
     .bottompanel {
