--- a/less/qwebirc/tabbar.less
+++ b/less/qwebirc/tabbar.less
@@ -31,7 +31,8 @@
             white-space: nowrap;
             font-weight: bold;
             border-radius: 4px;
-            background: rgba(189, 189, 189, 0.1);
+
+            user-select: none;
 
             &:hover,&.selected {
                 background: #fff;
