--- a/mcss/qui-modifiable-css.hbs
+++ b/mcss/qui-modifiable-css.hbs
@@ -52,6 +52,8 @@
 }
 
 .qui .tabbar .tab {
+    background: {{$col 'E8E8E8' 'font'}}
+    background: rgba(189, 189, 189, 0.1);
     border: thin solid {{$col 'c8d2dc'}};
 }
 
