--- a/mcss/qui-modifiable-css.hbs
+++ b/mcss/qui-modifiable-css.hbs
@@ -52,7 +52,7 @@
 }
 
 .qui .tabbar .tab {
-    background: {{$col 'E8E8E8' 'font'}}
+    background: {{$col 'CCCCCC'}};
     background: rgba(189, 189, 189, 0.1);
     border: thin solid {{$col 'c8d2dc'}};
 }
