Point old browsers to browsehappy.org

--- a/templates/amd/welcome-pane.hbs
+++ b/templates/amd/welcome-pane.hbs
@@ -14,7 +14,7 @@
             {{else}}
             {{#if Browser.firefox}} <a href="https://addons.mozilla.org/en-US/firefox/addon/tab-notifier/" target="_blank">the Firefox Tab-notifier extension</a>
             {{else}}{{! http://caniuse.com/notifications }}
-            an extension to add <a href="http://caniuse.com/notifications" target="_blank">Desktop notifications</a>
+            an extension to add <a href="http://caniuse.com/notifications" target="_blank">Desktop notifications</a> or a <a href="http://browsehappy.com/?locale=en">current browser release</a>
             {{/if}}
             {{/if}}
         {{/if}}
